--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -30,8 +30,5 @@ dependencies {
     implementation 'com.blankj:utilcode:1.11.1'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
-
-
-
-
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
