change icon and complete part search

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity
             android:name=".activity.SearchActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".activity.MusicProcessActivity"></activity>
     </application>
 
 </manifest>
