--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="icbc.com.musiccut">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
 
     <application
         android:name=".MyApplication"
@@ -10,7 +13,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".activity.MainActivity"
             android:screenOrientation="portrait">
@@ -23,7 +27,8 @@
         <activity
             android:name=".activity.SearchActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.MusicProcessActivity"></activity>
+        <activity android:name=".activity.MusicProcessActivity"/>
+        <activity android:name=".permissions.PermissionsActivity" />
     </application>
 
 </manifest>
